test/langtools/tools/javac/records/miscellaneous/UnexpectedKindRecordTest.out
UnexpectedKindRecordTest.java:11:20: compiler.err.already.defined: kindname.method, i(), kindname.class, UnexpectedKindRecordTest.R
1 error
